<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.meplus.client.activity.RegisterActivity">

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:src="@drawable/logo" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/phone_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <EditText
                android:id="@+id/phone_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/icon_phone_hilight"
                android:drawablePadding="10dp"
                android:hint="@string/me_phone_number"
                android:singleLine="true"
                android:textColor="@color/mTextColor"
                android:textColorHint="@color/mTextColor" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/mTextColor" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <EditText
                android:id="@+id/email_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/icon_email_sign_up_hilight0"
                android:drawablePadding="10dp"
                android:hint="@string/me_email"
                android:singleLine="true"
                android:textColor="@color/mTextColor"
                android:textColorHint="@color/mTextColor" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/mTextColor" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <EditText
                android:id="@+id/password_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/icon_password_hilight"
                android:drawablePadding="10dp"
                android:hint="@string/me_password_number"
                android:password="true"
                android:singleLine="true"
                android:textColor="@color/mTextColor"
                android:textColorHint="@color/mTextColor" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/mTextColor" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/confirm_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <EditText
                android:id="@+id/confirm_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/icon_password_hilight"
                android:drawablePadding="10dp"
                android:hint="@string/me_password_confirm"
                android:password="true"
                android:singleLine="true"
                android:textColor="@color/mTextColor"
                android:textColorHint="@color/mTextColor" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/mTextColor" />

        </LinearLayout>


        <TextView
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:background="@drawable/button_blue"
            android:gravity="center"
            android:text="@string/me_register"
            android:textColor="@color/meWhite"
            android:textSize="@dimen/meTextSize"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>